--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
-  "dependencies": {
-    "steam-user": "^5.0.9"
-  }
+    "type": "module",
+    "dependencies": {
+        "steam-user": "^5.0.9"
+    }
 }
